codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                          "
"› 让 Codex 帮你做任何事   " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"  计划模式                " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
